
    Corrected a bug where the protocols implemented by the built-in object
    "logtalk" would not be returned by the implements_protocol/2-3 built-in
    predicates.

    Updated the CxProlog config file to require version 0.97.5 or later. This
    version adds the epsilon/0 arithmetic constant that is used in the library
    unit test support.

    Updated the "constraints/swipl/loader.lgt" helper file to avoid the errors
    generated when loading the CLP(FD) library with the SWI-Prolog "iso" flag
    set to "true".

    Updated the "dcgs" example unit tests to avoid a compilation error when
    using SWI-Prolog 5.11.3 and later versions due to changes in this compiler
    parser for stricter ISO Prolog syntax.


2.40.1 - June 30, 2010

    Restored support for GNU Prolog. Requires GNU Prolog version 1.4.0 (or
    later), which provides support for the ISO Prolog predicate directive
    multifile/1.

    Improved the built-in debugger by making explicit the calls to the (\+)/1
    built-in predicate.

    Corrected a bug where a call to a local predicate would always fail when
    an object or category contains a declared but not defined non-terminal.

    Corrected a bug in the compilation of (\+)//1 calls in grammar rules.
    Thanks to Bart Demoen, Ulrich Neumerkel, and Jan Burse for driving my
    attention to this bug.

    Recognize retractall/1, ground/1, keysort/2, sort/2, and numbervars/3 as
    de facto Prolog standard built-in predicates. Calls to these predicates
    will no longer be reported when the portability flag is set to "warning".
    In addition, added syntax coloring support for these predicates.

    Recognize e/0 and pi/0 as de facto Prolog standard built-in arithmetic
    functions. Calls to these functions will no longer be reported when the
    portability flag is set to "warning". In addition, added syntax coloring
    support for these two functions.

    Updated the internal hook predicate '$lgt_tr_predicate_indicators'/2,